; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-throttle.c_IncreaseEmulationSpeed.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-throttle.c_IncreaseEmulationSpeed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fps_scale_table = common dso_local global i32* null, align 8
@fps_scale = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"emulation speed %d%%\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IncreaseEmulationSpeed() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  br label %2

2:                                                ; preds = %11, %0
  %3 = load i32*, i32** @fps_scale_table, align 8
  %4 = load i32, i32* %1, align 4
  %5 = sext i32 %4 to i64
  %6 = getelementptr inbounds i32, i32* %3, i64 %5
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @fps_scale, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %10
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %1, align 4
  br label %2

14:                                               ; preds = %2
  %15 = load i32*, i32** @fps_scale_table, align 8
  %16 = load i32, i32* %1, align 4
  %17 = add nsw i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* @fps_scale, align 4
  %21 = call i32 (...) @RefreshThrottleFPS()
  %22 = load i32, i32* @fps_scale, align 4
  %23 = mul nsw i32 %22, 100
  %24 = ashr i32 %23, 8
  %25 = call i32 @FCEU_DispMessage(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %24)
  ret void
}

declare dso_local i32 @RefreshThrottleFPS(...) #1

declare dso_local i32 @FCEU_DispMessage(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
